# NaviCore-3D

./: .clang-tidy  .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  analyze_allan.py  analyze_real_run.py  analyze_yaw_init_timing.py  attitude_kinematics.py  audit_attitude_conventions.py  audit_imu_chain.py  audit_reference_chain.py  geodesy.py  listen_navicore.py  parse_mobile_log.py  pico_sdk_import.cmake  plot_gnss_innovations.py  run_all_benchmarks.py  run_gnss_innovation_audit.py  run_gravity_triad_audit.py  run_h3_experiment.py  run_h4_experiment.py  run_h4_sweep.py  run_h5_grid_search.py  run_h5_sync_analysis.py  run_h6_sync_audit.py  run_h7_gnss_audit.py  run_h7_gnss_chain_audit.py  run_h7b_unified_origin.py  run_h8_propagation_audit.py  run_h9_1_tilt_diagnostic.py  run_h9_predict_only_isolation.py  run_h9a_gravity_alignment_audit.py  run_h9a_gravity_init.py  run_h9b_attitude_propagation_audit.py  run_h9c_orientation_ref_audit.py  run_h9d_gravity_subtraction_audit.py  run_monte_carlo.py  run_mount_experiment.py  (+5 more)
.cursor/rules/: ship-and-document.mdc
.github/workflows/: README.md  code-audit.yml
calibration/: imu_mount.json
cmake/: NaviCoreAudit.cmake
data/real_run/: AccelerometerUncalibrated.csv  Gravity.csv  Gyroscope.csv  Metadata.csv
docs/: AccelerometerUncalibrated.csv  ESTIMATE_ENGINE_VS_NAV_VOCAB.md  EVIDENCE_CLOSEOUT.md  FAULT_INJECTION_LAB.md  Gyroscope.csv  KIT_BOM_ADALOGGER_BNO055_PA1010D.md  NAV_MODE_DEGRADATION.md  NHC_OPS_POLICY.md  ROADMAP_PNT_RESILIENCE.md  SAFETY_CODING_STANDARD.md  STATUS_ASSESSMENT.md  TARGET_RP2040_ADALOGGER_PORT.md  VIDEO_GAP3_HOWTO.md  VIDEO_GAP3_PRODUCTION.md  VIDEO_SCRIPT_GAP3_NHC.md  comarruga_lab_hardware.md  manifest.schema.json  mi_paseo_comarruga.csv  navicore_v1_hardware_blueprint_locked.md  regression_report.json  replay_sample.csv  sil_architecture.md  sil_fleet_manifest.example.json  telemetria_navicore.csv  verificacion_failsafe_stress.md
docs/_archive_short_run_jul15/: Accelerometer.csv  Location.csv  TotalAcceleration.csv
docs/allan/: RUNBOOK.md
docs/benchmarks/: EXPERIMENT_PROVENANCE.json  android_signal_identity_audit.json  attitude_convention_audit.json  body_frame_conformance_audit.json  e2e_regression_session_closure.md  gap1_body_forward_axis_merged.csv  gap1_body_forward_axis_report.json  gap1_delta_psi_constancy_report.json  gap1_delta_psi_merged.csv  gap2_gravity_identity_tick.csv  gap2_gravity_identity_tick_report.json  gap2_predict_chain_break_merged.csv  gap2_predict_chain_break_report.json  gap2_specific_force_decomposition.csv  gap2_specific_force_decomposition_report.json  gap3_correction_efficacy_report.json  gap3_cov_propagation_report.json  gap3_cov_step_audit_report.json  gap3_full_filter_h7.csv  gap3_gnss_k_block_audit.json  gap3_gnss_k_block_report.json  gap3_gnss_nis_anatomy_report.json  gap3_observation_cycle_report.json  gap3_question_a_report.json  gnss_innovation_audit.csv  gravity_triad_merged.csv  gravity_triad_report.json  h0_diagnostics.csv  h2_diagnostics.csv  h3_diagnostics.csv  h3_experiment_report.json  h3_experiment_report.md  h4_consistency.csv  h4_consistency_diagnostics.csv  h4_consistency_diagnostics_p0_100p0x.csv  h4_consistency_diagnostics_p0_10p0x.csv  h4_consistency_diagnostics_p0_20p0x.csv  h4_consistency_diagnostics_p0_2p0x.csv  h4_consistency_diagnostics_p0_50p0x.csv  h4_consistency_diagnostics_p0_5p0x.csv  (+126 more)
docs/diagnostics/: 01-overview.md  02-data-and-frames.md  03-experiments.md  04-findings.md  05-attitude-investigation.md  06-reproduction.md  07-signal-traceability.md  08-body-frame-contract.md  09-predict-conformance-audit.md  10-gap3-ins-model-audit.md  README.md  (+12 more)
src/targets/pico2_hardware/: CMakeLists.txt  bsp_ext_wdt.cpp  bsp_ext_wdt.hpp  bsp_gnss.cpp  bsp_gnss.hpp  bsp_imu_secondary.cpp  bsp_imu_secondary.hpp  bsp_power.cpp  bsp_power.hpp  bsp_sensors.cpp  bsp_sensors.hpp  bsp_uart_rx_ring.hpp  bsp_wt61c.cpp  bsp_wt61c.hpp  fault_tolerance.cpp  fault_tolerance.hpp  health_monitor.cpp  health_monitor.hpp  hw_config.hpp  loop_metrics.cpp  loop_metrics.hpp  main.cpp  nav_state_udp.cpp  nav_state_udp.hpp  pico_sdk_import.cmake  ring_stress_host_test.cpp  safe_log.cpp  safe_log.hpp  task_monitor.cpp  task_monitor.hpp  wifi_config.h.example
src/targets/pico_w/: CMakeLists.txt  bsp_sensors_stub.cpp  bsp_sensors_stub.hpp  main.cpp  pico_nav_tick.cpp  pico_nav_tick.hpp  pico_system_stub.cpp  telemetry_udp_lwip.cpp  telemetry_udp_lwip.hpp  wifi_config.h.example
src_pc/: CMakeLists.txt  main.cpp
src_pc/core/: NavState.cpp  NavState.h  nav_math.h  vector3d.cpp  vector3d.h  waypoint.cpp
src_pc/fusion/: dead_reckoning.cpp  dead_reckoning.h
src_pc/sensors/: gps.cpp  gps.h  imu.cpp  imu.h  pressure.cpp  pressure.h
tools/: audit_android_signal_identity.py  audit_body_frame_conformance.py  audit_cand1_tunnel_scale.py  audit_dtheta_jump_154_164.py  audit_fva_multiplicative_surge.py  audit_fva_pattvel_110_154.py  audit_gap1_body_forward_axis.py  audit_gap1_delta_psi_constancy.py  audit_gap2_gravity_identity_tick.py  audit_gap2_predict_chain_break.py  audit_gap2_specific_force_decomposition.py  audit_gap3_correction_efficacy.py  audit_gap3_cov_propagation.py  audit_gap3_cov_step_cycle.py  audit_gap3_f1_cliff_anatomy.py  audit_gap3_f1_nis_gate_anatomy.py  audit_gap3_fix2_fix3_autoconsume.py  audit_gap3_fix2_fix3_tick_reconstruction.py  audit_gap3_fix2_vs_fix7.py  audit_gap3_gnss_accepted_autopsy.py  audit_gap3_gnss_k_block.py  audit_gap3_gnss_nis_anatomy.py  audit_gap3_nhc_block.py  audit_gap3_nhc_cliff_mechanism.py  audit_gap3_observation_cycle.py  audit_gap3_question_a.py  audit_gap4_alignment_sweep.py  audit_gap4_direct_cos_gate.py  audit_gap4_g1_fix2_5d_algebra.py  audit_gap4_g2_kvel_anatomy.py  audit_gap4_ppv_divergence_tree.py  audit_gap4_ppv_gate_autopsy.py  audit_gap4_ppv_k_consistency.py  audit_gap4_ppv_truth_table.py  audit_gap4_threshold_discrimination.py  audit_gap5_passive_controller_validation.py  audit_gap5_v2_observable_selection.py  audit_innov_break_vs_omega.py  audit_innov_explosion_ab.py  audit_innov_rise_continuity.py  (+83 more)
(+676 files in other folders)
